# shield-pr

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  coverage.json  docker-compose.yml  pyproject.toml  test-local.sh
.github/workflows/: lint.yml  publish.yml  test.yml
conda-forge/: recipe.yaml
homebrew/: shield-pr.rb
shield_pr/: __init__.py  cli.py
shield_pr/chains/: __init__.py  base.py  result-parser.py  result_parser.py  synthesis_chain.py  universal_chain.py
shield_pr/commands/: base_commands.py  review_command.py  review_diff.py  review_pr.py
shield_pr/config/: defaults.py  loader.py  models.py
shield_pr/core/: cache.py  errors.py  llm_client.py  review_pipeline.py
shield_pr/detection/: __init__.py  confidence.py  detector.py  file_analyzer.py  patterns.py
shield_pr/formatters/: __init__.py  base.py  github.py  gitlab.py  json_formatter.py  markdown.py  rich_renderer.py  slack.py
shield_pr/git/: __init__.py  diff_helpers.py  diff_parser.py  filter_matcher.py  filter_patterns.py  filters.py  models.py  pr_fetcher.py  pr_helpers.py  pr_info.py  repository.py
shield_pr/models/: __init__.py  finding.py  review_result.py
shield_pr/routing/: __init__.py  destinations.py  router.py
shield_pr/utils/: file_reader.py  logger.py  validators.py
test-samples/: SampleAndroid.kt  sample_backend.py  sample_frontend.tsx
tests/formatters/: test_base_formatter.py  test_github_formatter.py  test_gitlab_formatter.py  test_json_formatter.py  test_markdown_formatter.py  test_slack_formatter.py
tests/unit/: test_cache.py  test_chains_base.py  test_chains_models.py  test_chains_platforms.py  test_chains_registry.py  test_chains_result_parser.py  test_chains_synthesis.py  test_cli_commands.py  test_cli_context.py  test_cli_main.py  test_cli_review.py  test_cli_review_diff.py  test_config_loader.py  test_detection_analyzer.py  test_detection_confidence.py  test_detection_detector.py  test_detection_patterns.py  test_git_diff_parser.py  test_git_filters.py  test_logger.py  (+8 more)
(+8 files in other folders)
